# disease_backbone_builder

./: pyproject.toml  run.sh
app/: __init__.py
app/normalization/: __init__.py  disease_normalizer.py  gene_normalizer.py  mechanism_normalizer.py  phenotype_normalizer.py
app/pipelines/: build_backbone.py
app/prompts/: merge_assist.txt  module_refinement.txt  packet_extraction.txt
app/schemas/: __init__.py  aggregation.py  artifact_record.py  backbone_draft.py  base.py  builder_config.py  candidates.py  disease_descriptor.py  enums.py  extraction_result.py  literature_query_plan.py  literature_record.py  review_selection_record.py  rule_config.py  run_manifest.py  source_document.py  source_manifest.py  source_packet.py  validation_report.py
app/services/: aggregator.py  assembler.py  backbone_v2.py  extraction_adapter.py  literature_normalizer.py  llm_client.py  llm_extractor.py  normalizer.py  packetizer.py  pruner.py  pubmed_client.py  review_query_builder.py  review_selector.py  scorer.py  source_collector.py  validator.py
config/: backbone_rules.v1_1.yaml
disease_backbone_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
doc/: framework-v1.0.md  framework-v1.1.md  framework.md
docs/: backbone_audit.md  backbone_review_summary.md  backbone_v3_gap_analysis.md  backbone_v3_review_summary.md  confidence_scoring_v3.md  normalization_external_sources_gap_analysis.md  normalization_rules_externalized.md  normalization_rules_v3.md  project_audit.md  project_map.md  refactor_todo.md  runbook.md  standard_sources_setup.md
pydantic/: __init__.py
(+66 files in other folders)
